# CPlusPlusI

./: .gitignore  CMakeLists.txt  calculatorPrint.cpp  calculatorPrint.h  computePiMain.cpp  functionMain.cpp  test.cpp
01_SelfEvaluationStefanWeber/02_CMakeTemplate/: CMakeLists.txt  bitset.h  color.h  colora.h  q2.cpp
Ex10/: CMakeLists.txt  sharedPtr.h  uniquePtr.h
Ex10_new/: sharedPtr.h  testscript.cpp  uniquePtr.h
Ex1Fibonacci/: CMakeLists.txt  fibonacci.cpp  main.cpp
Ex2/: calculatorPrint.cpp  calculatorPrint.h  computePiMain.cpp  functionMain.cpp
Ex3/: CMakeLists.txt  main.cpp  whatswrong.cpp
Ex4/: CMakeLists.txt  ex04.cpp
Ex5/: CMakeLists.txt  main.cpp  vector.h
Ex6/: CMakeLists.txt  checkingaccount.cpp  checkingaccount.h  ex06.cpp
Ex7/: CMakeLists.txt  main.cpp  shape.cpp  shape.h
Ex8/: CMakeLists.txt  ex08.cpp  vector.h
Ex9/: CMakeLists.txt  ex09.cpp  stack.h
Ex_Study/: CMakeLists.txt  header.h  main.cpp
SelfeAssignement/: arrays.cpp  bitSetMain.cpp  bitset.h  classes.h  helloWorld.cpp  inheritance.h  initialisation.cpp  mainClasses.cpp  mainInheritance.cpp  pointerReference.cpp  pointerReference2.cpp
